--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -32,5 +32,24 @@
         p {
             color: #fff;
         }
+        @media screen and (max-width: 425px) {
+            padding: 40px 16px;
+          }
     }
+    @media screen and (max-width: 425px) {
+        padding: 40px 16px;
+        width: 100%;
+        overflow: hidden;
+
+        .input-wrapper {
+            input {
+                padding: 16px;
+                width: 100%;
+            }
+            button {
+                padding: 16px 32px;
+                right: 0;
+            }
+        }
+      }
 }
