--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,7 @@
 @import "grid";
 @import "button";
 @import "footer";
+@import "player";
 
 @font-face {
   font-family: "Plus Jakarta Sans";
@@ -126,20 +127,6 @@ p {
   margin: 0 auto;
 }
 
-.player {
-  position: absolute;
-  width: 884px;
-  height: 57px;
-  top: 50%;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  iframe {
-    width: 100%;
-    height: 130px;
-  }
-}
-
 .button {
   display: block;
   // padding: 16px 18px;
@@ -160,11 +147,11 @@ p {
   position: relative;
   padding: 0px 82px;
   background-color: #000;
+  border-bottom: 1px solid #5a5a5a;
   .navbar-content {
     padding: 34px 0px;
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid #fff;
   }
   .menu {
     ul {
@@ -418,10 +405,6 @@ p {
       justify-content: center;
       flex-direction: column;
     }
-  }
-  .player {
-    width: 90%;
-    top: 30%;
   }
 
   .footer {
